--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <header>
   </header>
   <body>
-  <a href="https://www.twitch.tv/einfachvivii">Hello World Sinnix</a>
+  <a href="Sinnix.de">Hello World Sinnix</a>
    </body>
 </html>
