--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <header>
   </header>
   <body>
-  <a href="Sinnix.de">Hello World Sinnix</a>
+  <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
    </body>
 </html>
