--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <header>
   </header>
   <body>
-  <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
+     <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
+     <img src="https://github.com/Happycat1999/happycat1999.github.io/raw/main/2021-07-16_10.52.21.png" />
    </body>
 </html>
