--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <html>
   <header>
+    <style>
+h2 { 
+  color: red;
+  background-color: beige;
+  font-size: 1.5em;
+}
+
+p {
+  color: brown;
+}
+
+</style>
+
+    
   </header>
   <body>
+    <h2>Farylizer</h2>
+    <p>
      <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
-    <br>
+    </p>
+      
+      <br>
      <img src="https://github.com/Happycat1999/happycat1999.github.io/raw/main/2021-07-16_10.52.21.png" />
    </body>
 </html>
