--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ h2 {
   background-color: beige;
   font-size: 1.5em;
 }
+     h3 {
+       background-color: Black;
 
 p {
   color: brown;
@@ -17,11 +19,13 @@ p {
   </header>
   <body>
     <h2>Farylizer</h2>
-    <p>
+    <h3>
+        <p>
      <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
     </p>
       
       <br>
      <img src="https://github.com/Happycat1999/happycat1999.github.io/raw/main/2021-07-16_10.52.21.png" />
+      <h3>
    </body>
 </html>
