--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@ p {
 
     
   </header>
-  <body>
+  <body bgcolor=Black>
     <h2>Farylizer</h2>
-    <h3>
         <p>
      <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
     </p>
@@ -27,5 +26,4 @@ p {
       <br>
      <img src="https://github.com/Happycat1999/happycat1999.github.io/raw/main/2021-07-16_10.52.21.png" />
    </body>
-    </h3>
 </html>
