--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <style>
 h2 { 
   color: red;
-  background-color: beige;
   font-size: 1.5em;
 }
      h3 {
-       background-color: black;
+       background-color: 717171;
 
 p {
   color: brown;
