--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ h2 {
   color: red;
   font-size: 1.5em;
 }
-     h3 {
-       background-color: grey;
+
 
 p {
   color: brown;
@@ -16,7 +15,7 @@ p {
 
     
   </header>
-  <body bgcolor=Black>
+  <body bgcolor=717171>
     <h2>Farylizer</h2>
         <p>
      <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
