--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ p {
 
     
   </header>
-  <body bgcolor=717171>
+  <body bgcolor=black>
     <h2>Farylizer</h2>
         <p>
      <a href="https://github.com/Happycat1999/McPlugin">Mein Minecraft Plugin!</a>
