--- a/praktikum.html
+++ b/praktikum.html
@@ -4,5 +4,10 @@
   </head>
   
   <body>
+    Mein Praktikum:
+    <ul>
+      <li>Tag 1: Ankommen</li>
+      <li>Tag 2: Programmieren</li> 
+    </ul>
   </body>
 </html>
