--- a/praktikum.html
+++ b/praktikum.html
@@ -8,6 +8,7 @@
     <ul>
       <li>Tag 1: Ankommen</li>
       <li>Tag 2: Programmieren</li> 
+      <li>Tag 3: Besprechungen über die kommende Zeit</li>
     </ul>
   </body>
 </html>
