--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ p {
     </p>
       
       <br>
-
-    <h3> Luca ist eine schwule haha kleine sasack </h3>
+    <h3> When you clicked on this website you are a Gay person </h3>
    </body>
 </html>
