--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@ p {
       
       <br>
     <h3> When you clicked on this website you are a Gay person </h3>
+    <form> 
+      <button name="Button" value="OK" type="Button">Click Here</button>
    </body>
 </html>
