--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ p {
       
       <br>
     <form> 
-      <button name="Button" value="OK" type="Button">Click Here</button>
+      <button onclick="window.location.href = 'https://modern-gaming.net/user/14009-happycat1999/';">Click Here</button>
    </body>
 </html>
